<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:context=".ui.UploadActivity">

            <TextView
                android:id="@+id/input_desc_name"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/upload_view_label_name" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/input_field_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/upload_view_hint_name"
                    android:inputType="text|textAutoCorrect|textAutoComplete"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/input_desc_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/upload_view_label_ingredients" />

            <TextView
                android:id="@+id/input_list_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_italic"
                android:gravity="center"
                android:text="@string/upload_view_label_list_ingredients"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_field_ingredients_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top|start"
                    android:hint="@string/upload_view_hint_ingredient_name"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoCorrect|textAutoComplete"
                    android:maxLength="64"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical" />

                <EditText
                    android:id="@+id/input_field_ingredients_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_weight="1"
                    android:hint="@string/upload_view_hint_ingredient_quantity"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoCorrect|textAutoComplete"
                    android:maxLength="64"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical" />

                <EditText
                    android:id="@+id/input_field_ingredients_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_weight="1"
                    android:hint="@string/upload_view_hint_ingredient_type"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoCorrect|textAutoComplete"
                    android:maxLength="64"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <Button
                android:id="@+id/input_btn_add_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/upload_view_label_add_ingredient_btn" />

            <TextView
                android:id="@+id/input_desc_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="16sp"
                android:text="@string/upload_view_label_steps" />

            <TextView
                android:id="@+id/input_list_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_italic"
                android:gravity="center"
                android:text="@string/upload_view_label_list_steps"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/input_field_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top|start"
                    android:hint="@string/upload_view_hint_steps"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textAutoComplete|textAutoCorrect"
                    android:maxLength="256"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/input_btn_add_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/upload_view_label_add_step_btn" />

            <TextView
                android:id="@+id/input_desc_image"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/upload_view_label_img_url" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/input_field_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/upload_view_hint_img_url"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/input_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:text="@string/upload_view_label_submit_btn" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>